<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="home_page">首页</string>
    <string name="shopping_mall">商城</string>
    <string name="order">订单</string>
    <string name="master">大师</string>

    <string name="common_problem">常见问题</string>
    <string name="payment_setting">支付设置</string>
    <string name="paymentpassword">支付密码</string>
    <string name="message_center">消息中心</string>
    <string name="rcharge">充值</string>
    <string name="customer_service">客服</string>
    <string name="shop">店铺</string>
    <string name="Collection">收藏</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="purchase_immediately">立即购买</string>
    <string name="cancel">取消</string>
    <string name="not_to_see">不让看</string>
    <string name="complete">完成</string>
    <string name="opinion_and_feedback">意见与反馈</string>
    <string name="search_the_shop">搜索店铺</string>
    <string name="app_Valuable_advice">请留下您的宝贵意见或建议，我们将努力改进(不少于五个字)</string>
    <string name="app_Phone">请留下手机号码，以便我们回复您</string>
    <string name="privacy">隐私</string>
    <string name="receiving_notification">接收通知</string>
    <string name="service">Hi,我是您的客服Angle</string>
    <string name="refund_progress">退款进度</string>
    <string name="service_progress">服务进度</string>
    <string name="guarantee_assets">为保证您的资金安全，绑定账户本人的银行卡</string>
    <string name="card_number">卡   号</string>
    <string name="exemption_fee">无需网银/免手续费</string>
    <string name="next_step">下一步</string>
    <string name="real_name">   真实姓名</string>
    <string name="id_card_no">身份证号码</string>
    <string name="phone_number">手机号码</string>
    <string name="trained">我受过专业培训</string>
    <string name="untrained">我未受过专业培训</string>
    <string name="submit">提交</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="balance">余额</string>
    <string name="money">¥0.00</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="to_authenticate">去认证</string>
    <string name="payment_management">支付管理</string>
    <string name="Setting_the_payment_password">设置支付密码</string>
    <string name="new_receiving_address">新增收货地址</string>
    <string name="card_payment">卡支付</string>
    <string name="face_to_face_payment">该功能用于向商家当面付款</string>
    <string name="want_to_recharge">我要充值</string>
    <string name="view_the_order_record">查看订单记录</string>
    <string name="verification_code">验证码</string>
    <string name="sms_authentication_code">短信验证码</string>
    <string name="no_verification_code">收不到验证码?</string>
    <string name="verification">验证</string>
    <string name="head_portrait">头像</string>
    <string name="user_name">用户名</string>
    <string name="account_password">账号密码</string>
    <string name="beauty_living_room">多米美容生活馆</string>
    <string name="single_product_coupons">单品抵扣劵</string>
    <string name="shop_general_voucher">店铺通用劵</string>
    <string name="availability">张可用</string>
    <string name="recharge_amount">充值金额：</string>
    ]
    <string name="recharge_amount_one">充值金额</string>
    <string name="actual_acquisition">实际获得</string>
    <string name="element">元</string>
    <string name="payment_method">支付方式：</string>
    <string name="wechat">微信</string>
    <string name="input_recharge_amount">请输入您需要充值的金额</string>
    <string name="reading_consent">已阅读并同意</string>
    <string name="recharge_protocol">《会员卡充值协议》</string>
    <string name="view_the_recharge_record"><![CDATA[查看充值记录>>]]></string>
    <string name="be_careful">注：女王卡支持所有加盟店我使用，安全，便捷；</string>
    <string name="recharge_activity">充值优惠活动：</string>
    <string name="family_friend">加我好友时需要验证</string>
    <string name="not_to_see_me">不让他(她)看我的动态</string>
    <string name="not_to_see_her">不看他(她)的动态</string>
    <string name="allow_friends_see">允许朋友查看动态的范围</string>
    <string name="allow_Stranger_see">允许陌生人查看十条动态</string>
    <string name="three_days">最近三天</string>
    <string name="no_historical_Search">暂无历史记录</string>
    <string name="historical_Search">历史搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="payment_order">支付订单</string>
    <string name="remaining_time">支付剩余时间</string>
    <string name="wechat_payment">微信支付</string>
    <string name="queen_payment">女王卡支付</string>
    <string name="confirmation_of_payment">确认支付</string>
    <string name="add_phone_number">请输入手机号</string>
    <string name="add_verification">请输入验证码</string>
    <string name="add_password">请输入密码</string>
    <string name="get_message_information">获取短息验证码</string>
    <string name="determine">确定</string>
    <string name="secure_environment">您的账户当前处于安全环境，可直接输入要更换的新手机号</string>
    <string name="change_immediately">立即更换</string>
    <string name="photograph">拍照</string>
    <string name="photo_selection">从相册选择</string>
    <string name="recommendable_projects">推荐项目</string>
    <string name="more"><![CDATA[更多>]]></string>
    <string name="sort">综合排序</string>
    <string name="sales">销量最高</string>
    <string name="distance">距离最近</string>
    <string name="screen">筛选</string>
    <string name="aesthetic_remittance">美学汇</string>
    <string name="manicure">美甲美手</string>
    <string name="hairdressing_custom">美发定制</string>
    <string name="cosmetology_and_body">美容美体</string>
    <string name="semi_permanent">半永久</string>
    <string name="free_shipping">九块九包邮</string>
    <string name="dily_special_price">天天特价</string>
    <string name="good_store">人气好店</string>
    <string name="satisfy">满足你的挑剔</string>
    <string name="personal_information"><![CDATA[个人信息>]]></string>
    <string name="gold_member">黄金会员</string>
    <string name="myposition">我的位置</string>
    <string name="myfriend">我的好友</string>
    <string name="more_recommendation">更多推荐</string>
    <string name="myassets">我的资产</string>
    <string name="my_collection">我的收藏</string>
    <string name="follow_shop">关注店铺</string>
    <string name="my_Tracks">我的足迹</string>
    <string name="evaluate">评价</string>
    <string name="Coupon">优惠券</string>
    <string name="invincible_coupon">无敌劵</string>
    <string name="queen">女王卡</string>
    <string name="member_management">会员管理</string>
    <string name="notused">3张未使用</string>
    <string name="mywallet">我的钱包</string>
    <string name="my_magic_beans">我的魔豆</string>
    <string name="gift">邀请有奖</string>
    <string name="beauty">成为美业人</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="customer_service_center">客服中心</string>
    <string name="enter_the_shop">请输入店铺名称或商品名称</string>
    <string name="business_features">商家特色（可多选）</string>
    <string name="new_business">新商家</string>
    <string name="brand_business">品牌商家</string>
    <string name="consumer_security">消费者保障</string>
    <string name="return_goods">7天内退货</string>
    <string name="support_Invoicing">支持开发票</string>
    <string name="beans_to_money">魔豆抵钱</string>
    <string name="price_range">价格区间（元）</string>
    <string name="minimum_price">最低价</string>
    <string name="highest_price">最高价</string>
    <string name="preferential_activities">优惠活动（单选）</string>
    <string name="preferential_merchants">优惠商家</string>
    <string name="discounted_goods">折扣商品</string>
    <string name="full_reduction">满减优惠</string>
    <string name="collar_coupons">进店领劵</string>
    <string name="full_gift">满赠活动</string>
    <string name="scavenging_screening">取消筛选</string>
    <string name="withdrawals">提现</string>
    <string name="account_balance">账户余额</string>
    <string name="fine_balance">余额明细</string>
    <string name="RMB">¥</string>
    <string name="binding_recharge">绑定银行卡充值</string>
    <string name="balance_recharge">余额充值</string>
    <string name="amount_of_cash">提现金额</string>
    <string name="present_balance">可提现余额</string>
    <string name="full_presentation">全部提现</string>
    <string name="bring_new_card">提现至新卡</string>
    <string name="my_wallet">我的钱包</string>
    <string name="magic_bean">魔豆</string>
    <string name="reservation">保存</string>
    <string name="administration">管理</string>
    <string name="coupon">优惠券</string>


</resources>
