<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/home_coor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:fitsSystemWindows="true"
            tools:context="com.peipei.app.MainActivity"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_scrollFlags="scroll">

                    <include layout="@layout/activity_home_esthetics" />

                </android.support.design.widget.CollapsingToolbarLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/comment_3_dip"
                    android:layout_marginRight="@dimen/comment_3_dip"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        style="@style/Recommend_layout"
                        android:layout_height="@dimen/comment_40_dip">

                        <TextView
                            android:id="@+id/full_rb_sort"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sort"
                            android:textSize="@dimen/comment_12_size" />
                        <ImageView
                            android:id="@+id/iv_sort"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:src="@drawable/arrow_dwon_blue" />

                        <ImageView
                            android:id="@+id/iv_sort1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:src="@drawable/arrow_up_black"
                            android:visibility="gone" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/full_rb_sales"
                        style="@style/Recommend_layout"
                        android:layout_height="@dimen/comment_40_dip"
                        android:text="@string/sales"
                        android:textSize="@dimen/comment_12_size" />

                    <TextView

                        android:id="@+id/full_rb_distance"
                        style="@style/Recommend_layout"
                        android:layout_height="@dimen/comment_40_dip"
                        android:text="@string/distance"
                        android:textSize="@dimen/comment_12_size" />

                    <LinearLayout
                        style="@style/Recommend_layout"

                        android:layout_height="@dimen/comment_40_dip"

                        >

                        <TextView
                            android:id="@+id/full_rb_screen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/screen"
                            android:textSize="@dimen/comment_12_size" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/comment_1_dip"
                            android:src="@drawable/icon_home_screen" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.design.widget.AppBarLayout>

            <FrameLayout
                android:id="@+id/fl_home_full"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        </android.support.design.widget.CoordinatorLayout>
        />
    </LinearLayout>

</LinearLayout>